perf(mobile): optimize vite chunks, preload fonts, hide 3D canvas and stars on mobile

--- a/index.html
+++ b/index.html
@@ -1,37 +1,45 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/dark-logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
-    
-    <!-- Primary Meta Tags -->
-    <title>Provisent EduTech | Transform Skills, Build Careers</title>
-    <meta name="title" content="Provisent EduTech | Transform Skills, Build Careers" />
-    <meta name="description" content="Join 500,000+ students learning professional skills with Provisent. Earn globally recognized certifications and transform your career today." />
-    <meta name="keywords" content="online courses, professional certification, web development, data science, tech careers, online learning" />
-    <meta name="author" content="Provisent EduTech" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.provisent.com/" />
-    <meta property="og:title" content="Provisent EduTech | Transform Skills, Build Careers" />
-    <meta property="og:description" content="Join 500,000+ students learning professional skills with Provisent. Earn globally recognized certifications and transform your career today." />
-    
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.provisent.com/" />
-    <meta property="twitter:title" content="Provisent EduTech | Transform Skills, Build Careers" />
-    <meta property="twitter:description" content="Join 500,000+ students learning professional skills with Provisent. Earn globally recognized certifications and transform your career today." />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logo-dark.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
 
-    <!-- Performance Optimizations -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="canonical" href="https://www.provisent.com/" />
+  <!-- Primary Meta Tags -->
+  <title>Provisent EduTech | Transform Skills, Build Careers</title>
+  <meta name="title" content="Provisent EduTech | Transform Skills, Build Careers" />
+  <meta name="description"
+    content="Join 500,000+ students learning professional skills with Provisent. Earn globally recognized certifications and transform your career today." />
+  <meta name="keywords"
+    content="online courses, professional certification, web development, data science, tech careers, online learning" />
+  <meta name="author" content="Provisent EduTech" />
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.provisent.com/" />
+  <meta property="og:title" content="Provisent EduTech | Transform Skills, Build Careers" />
+  <meta property="og:description"
+    content="Join 500,000+ students learning professional skills with Provisent. Earn globally recognized certifications and transform your career today." />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.provisent.com/" />
+  <meta property="twitter:title" content="Provisent EduTech | Transform Skills, Build Careers" />
+  <meta property="twitter:description"
+    content="Join 500,000+ students learning professional skills with Provisent. Earn globally recognized certifications and transform your career today." />
+
+  <!-- Performance Optimizations -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet" />
+  <link rel="canonical" href="https://www.provisent.com/" />
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
